--- a/medfluffy-api/package.json
+++ b/medfluffy-api/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "fastest-validator": "^1.17.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.3.3",
